--- a/style.css
+++ b/style.css
@@ -1,30 +1,24 @@
 @font-face {
-    font-family: 'TT Lakes';    
-    font-weight: 400;
-    font-style: normal;
-    src: url('../font/TTLakes-Regular.eot');
-    src: url('TTLakes-Regular.eot?#iefix') format('embedded-opentype'),
-    url('../font/TTLakes-Regular.woff') format('woff'),
-    url('../font/TTLakes-Regular.ttf') format('truetype');
-    }
-    @font-face {
-        font-family: 'TT LakesBold';
-        src: url('../font/TTLakes-Bold.eot');
-        src: url('TTLakes-Bold.eot?#iefix') format('embedded-opentype'),
-        url('../font/TTLakes-Bold.woff') format('woff'),
-        url('../font/TTLakes-Bold.ttf') format('truetype');
-        font-weight: 700;
-        font-style: normal;
-    }
-    @font-face {
-        font-family: 'TT Lakes Medium';
-        src: url('../font/TTLakes-Medium.eot');
-        src: url('TTLakes-Medium.eot?#iefix') format('embedded-opentype'),
-        url('../font/TTLakes-Medium.woff') format('woff'),
-        url('../font/TTLakes-Medium.ttf') format('truetype');
-        font-weight: 500;
-        font-style: normal;
-    }
+	font-family: 'TTLakes-Regular';
+	src: url('fonts/TTLakes-Regular.eot');
+	src: local('☺'), url('fonts/TTLakes-Regular.woff') format('woff'), url('fonts/TTLakes-Regular.ttf') format('truetype'), url('fonts/TTLakes-Regular.svg') format('svg');
+	font-weight: 400;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'TTLakes-Medium';
+	src: url('fonts/TTLakes-Medium.eot');
+	src: local('☺'), url('fonts/TTLakes-Medium.woff') format('woff'), url('fonts/TTLakes-Medium.ttf') format('truetype'), url('fonts/TTLakes-Medium.svg') format('svg');
+	font-weight: 500;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'TTLakes-Bold';
+	src: url('fonts/TTLakes-Bold.eot');
+	src: local('☺'), url('fonts/TTLakes-Bold.woff') format('woff'), url('fonts/TTLakes-Bold.ttf') format('truetype'), url('fonts/TTLakes-Bold.svg') format('svg');
+	font-weight: 700;
+	font-style: normal;
+}
 
 html {
     box-sizing: border-box;
